@@ -13,7 +13,8 @@ TOMCAT_VERSION="8.5.40"
 DESCRIPTION="A monitoring and reporting suite for asterisk based PBX"
 HOMEPAGE="https://www.queuemetrics.com"
 LICENSE="all-rights-reserved"
-SRC_URI="http://downloads.loway.ch/qm/tomcat/apache-tomcat-${TOMCAT_VERSION}.tar.gz http://downloads.loway.ch/qm/QueueMetrics-${PV}.tar.gz"
+SRC_URI="https://archive.apache.org/dist/tomcat/tomcat-8/v${TOMCAT_VERSION}/bin/apache-tomcat-${TOMCAT_VERSION}.tar.gz \
+	http://downloads.loway.ch/qm/QueueMetrics-${PV}.tar.gz"
 RESTRICT="mirror"
 SLOT="0"
 KEYWORDS="~amd64"
